first MVP adjustments

--- a/app/src/main/res/values/spinner_values.xml
+++ b/app/src/main/res/values/spinner_values.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="interval">
+    <integer-array name="interval">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>5</item>
+        <item>7</item>
+        <item>10</item>
+    </integer-array>
+    <string-array name="intervalString">
         <item>1</item>
         <item>2</item>
         <item>3</item>
@@ -8,5 +16,4 @@
         <item>7</item>
         <item>10</item>
     </string-array>
-
 </resources>
